--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"license": "MIT",
 	"scripts": {
 		"clean": "rm -rf build/*",
-		"build": "tsc -p tsconfig.json"
+		"build": "tsc -p tsconfig.json",
+		"clean-build": "yarn clean && yarn build"
 	},
 	"dependencies": {},
 	"devDependencies": {
