--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
 	"license": "MIT",
 	"scripts": {
 		"clean": "rm -rf build/*",
-		"build": "tsc -p tsconfig.json",
+		"build": "ttsc -p tsconfig.json",
 		"clean-build": "yarn clean && yarn build"
 	},
 	"dependencies": {},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.26.0",
 		"@typescript-eslint/parser": "^5.26.0",
+		"@zerollup/ts-transform-paths": "^1.7.18",
 		"eslint": "^8.16.0",
 		"eslint-config-airbnb": "^19.0.4",
-		"eslint-plugin-import": "^2.26.0"
+		"eslint-plugin-import": "^2.26.0",
+		"ttypescript": "^1.5.13",
+		"typescript": "^4.7.3"
 	}
 }
