--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,5 +40,13 @@
 		"esModuleInterop": true,
 		"preserveSymlinks": true,
 		"outDir": "build/",
+		"plugins": [
+			{
+				"transform": "@zerollup/ts-transform-paths",
+				"exclude": [
+					"*"
+				]
+			}
+		]
 	},
 }
